--- a/EdgeExtension/0FA-Edge/manifest.json
+++ b/EdgeExtension/0FA-Edge/manifest.json
@@ -11,7 +11,17 @@
     "manifest_version" : 3,
     "author" : "0FA team",
     "action" : {
-        "default_popup" : "index.html",
+        "default_popup" : "popup/popup.html",
         "default_title" : "Rand word"
+    },
+    "background": {
+    "service_worker": "background/background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://ilearn.mq.edu.au/*"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
+  ]
 }
